Fix flow activity spacing
sidebar spacing was modified to account for comments, but flow activity wasn't updated along with the action activity.

--- a/src/js/views/patients/sidebar/flow/flow-sidebar.scss
+++ b/src/js/views/patients/sidebar/flow/flow-sidebar.scss
@@ -7,3 +7,8 @@
 .patient-flow-sidebar--no-results {
   color: $black-60;
 }
+
+.patient-flow-sidebar__activity-item {
+  line-height: 14px;
+  margin-bottom: 8px;
+}
